<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="title_activity_favourite_movies">FavouriteMoviesActivity</string>

    <string name="image_loading">Image Loading</string>
    <string name="_10">10</string>
    <string name="title">Title</string>
    <string name="releasing_on">Releasing on</string>
    <string name="synopsis">Synopsis</string>
    <string name="trailers">Trailers</string>
    <string name="save">Save</string>
    <string name="reviews">Reviews</string>
    <string name="share">Share</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="favourites">Favourites</string>
    <string name="author">Author</string>
    <string name="content">Content</string>
    <string name="trailer_1">Trailer 1</string>
    <string name="unsave">Unsave</string>
    <string name="play_trailer">Play Trailer</string>
</resources>
